src/objects/Velocity_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Country_code__c</fullName>
        <label>Country Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                    <default>true</default>
                    <label>GB</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                    <isActive>false</isActive>
                    <label>Benelux</label>
                </value>
                <value>
                    <fullName>France</fullName>
                    <isActive>false</isActive>
                    <label>France</label>
                </value>
                <value>
                    <fullName>Germany</fullName>
                    <isActive>false</isActive>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>Italy</fullName>
                    <isActive>false</isActive>
                    <label>Italy</label>
                </value>
                <value>
                    <fullName>Norway</fullName>
                    <isActive>false</isActive>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>UK</fullName>
                    <isActive>false</isActive>
                    <label>UK</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LowerLimit__c</fullName>
        <inlineHelpText>Litre spend per vehicle Lower Limit</inlineHelpText>
        <label>Lower Limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpperLimit__c</fullName>
        <inlineHelpText>Litre spend per vehicle Upper Limit</inlineHelpText>
        <label>Upper Limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VehicleType__c</fullName>
        <label>Type of Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Vehicles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VelocityProfile__c</fullName>
        <label>Velocity Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Velocity_Profile</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_code__c</columns>
        <columns>VelocityProfile__c</columns>
        <columns>VehicleType__c</columns>
        <columns>LowerLimit__c</columns>
        <columns>UpperLimit__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>